crates/id_effect/tests/ui/tilde_key_invalid_call.stderr
error[E0618]: expected function, found struct `Database`
 --> tests/ui/tilde_key_invalid_call.rs:6:14
  |
2 |   struct Database;
  |   --------------- struct `Database` defined here
...
5 |     let _ = id_effect::effect!(|r: &mut id_effect::caps!(Database)| {
  |  ___________-
6 | |     let _ = ~Database();
  | |              ^^^^^^^^
7 | |   });
  | |____- call expression requires function
