crates/id_effect/tests/ui/tilde_key_invalid_call.rs
#![allow(unused)]
struct Database;

fn main() {
  let _ = id_effect::effect!(|r: &mut id_effect::caps!(Database)| {
    let _ = ~Database();
  });
}
